Fixed Overflow on Small Screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@ $color-text: #d7e1e5;
 body {
   font-family: "Lato", sans-serif;
   margin-top: 60px;
+  overflow-x: hidden;
 }
 
 //////////////////////////////////////////////////////////////////////
